; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/serio/extr_gscps2.c_gscps2_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/serio/extr_gscps2.c_gscps2_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gscps2port = type { i8*, i32 }

@GSC_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gscps2port*)* @gscps2_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gscps2_reset(%struct.gscps2port* %0) #0 {
  %2 = alloca %struct.gscps2port*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store %struct.gscps2port* %0, %struct.gscps2port** %2, align 8
  %5 = load %struct.gscps2port*, %struct.gscps2port** %2, align 8
  %6 = getelementptr inbounds %struct.gscps2port, %struct.gscps2port* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  store i8* %7, i8** %3, align 8
  %8 = load %struct.gscps2port*, %struct.gscps2port** %2, align 8
  %9 = getelementptr inbounds %struct.gscps2port, %struct.gscps2port* %8, i32 0, i32 1
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.gscps2port*, %struct.gscps2port** %2, align 8
  %13 = call i32 @gscps2_flush(%struct.gscps2port* %12)
  %14 = load i8*, i8** %3, align 8
  %15 = load i32, i32* @GSC_RESET, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %14, i64 %16
  %18 = call i32 @writeb(i32 255, i8* %17)
  %19 = load %struct.gscps2port*, %struct.gscps2port** %2, align 8
  %20 = call i32 @gscps2_flush(%struct.gscps2port* %19)
  %21 = load %struct.gscps2port*, %struct.gscps2port** %2, align 8
  %22 = getelementptr inbounds %struct.gscps2port, %struct.gscps2port* %21, i32 0, i32 1
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @spin_unlock_irqrestore(i32* %22, i64 %23)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @gscps2_flush(%struct.gscps2port*) #1

declare dso_local i32 @writeb(i32, i8*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
